// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert & to and for missing assignments 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Yes, Your assignment named Chapter 1 and Problems is missing, Also Your assignment named Chapter 4 and Problems is missing, . Anything else?</speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>You can ask to list grades, or check if you have any missing assignments.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.0 ask-sdk-v1adapter/2.7.0",
  "version": "1.0",
}
`;

exports[`names two assignments  that are missing 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Yes, Your assignment named Chapter 1 Problems is missing, Also Your assignment named Chapter 2 Problems is missing,  and 2 more.. Anything else?</speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>You can ask to list grades, or check if you have any missing assignments.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.0 ask-sdk-v1adapter/2.7.0",
  "version": "1.0",
}
`;

exports[`names two assignments that are missing 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Yes, Your assignment named Chapter 1 Problems is missing, Also Your assignment named Chapter 2 Problems is missing, . Anything else?</speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>You can ask to list grades, or check if you have any missing assignments.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.0 ask-sdk-v1adapter/2.7.0",
  "version": "1.0",
}
`;

exports[`says no no missing assignments if you have nothing missing 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>You have no missing assignments. Anything else?</speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>You can ask to list grades, or check if you have any missing assignments.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.0 ask-sdk-v1adapter/2.7.0",
  "version": "1.0",
}
`;
